--- a/Chatty.Infrastructure/Chatty.Infrastructure.csproj
+++ b/Chatty.Infrastructure/Chatty.Infrastructure.csproj
@@ -1,4 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Chatty.ApplicationCore\Chatty.ApplicationCore.csproj" />
