--- a/Chatty.WebApi/appsettings.json
+++ b/Chatty.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChattyDatabase": "server=localhost;database=chatty;user=root;password="
+  }
 }
