--- a/Chatty.WebApi/appsettings.json
+++ b/Chatty.WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChattyDatabase": "server=172.17.0.2;port=3306;database=chatty;user=root;password=root"
+    "ChattyDatabase": "server=localhost;port=3306;database=chatty;user=root;password="
   }
 }
